<resources>

<!--  For Shared Preferences -->

    <string name="current_day">Access Preference File to Get Stored Day</string>
    <string name="current_month">Access Preference File to Get Stored Month</string>
    <string name="current_year">Access Preference File to Get Stored Year</string>


<!-- For Application's Components -->

    <string name="app_name">Diary of Japanese Study</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="mau_cau">Clause</string>
    <string name="jlpt_test">JLPT Practice Test</string>
    <string name="format_so_ngay_luyen_tap">Number of days practicing: %s</string>
    <string name="format_mau_cau">Clause: %s</string>
    <string name="title_prompt">Enter The Title You Want:</string>
    <string name="so_ngay_luyen_tap_prompt">Enter Numbers of Days Practicing: </string>
    <string name="reminder_prompt">Set Reminder: </string>
    <string name="grammatical_structure_prompt">Enter Clause: </string>
    <string name="alert_missing_inputs">Missing Inputs</string>
    <string name="inputs_are_not_filled_fully">One or more inputs are not filled in, are you sure you want to finish?</string>
    <string name="finish_anyway">Yes, finish anyway</string>
    <string name="my_bad">Oops, my bad!!!</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="the_day_before">The Day Before</string>
    <string name="start">Start!!!</string>
    <string name="out_of_total" translatable="false">%d/%d</string>
    <string name="alert_exam_ending">The End</string>
    <string name="do_you_want_to_check_again">This is the end of the exam, make sure your answers thoroughly checked. Do you want to turn it in now? </string>
    <string name="turn_in">Yes, please!</string>
    <string name="i_want_to_check_again">I need to double check</string>
    <string name="reading_title">Reading</string>
    <string name="vocab_title">Vocabulary</string>
    <string name="grammar_title">Grammar</string>
    <string name="head_of_text">This is the first question!!!</string>
    <string name="optionA" translatable="false">A. %s</string>
    <string name="optionB" translatable="false">B. %s</string>
    <string name="optionC" translatable="false">C. %s</string>
    <string name="optionD" translatable="false">D. %s</string>
    <string name="time_up">Time Up!!!</string>
    <string name="test_performance" translatable="false">%d%</string>
    <string name="total_time">Total Time: %s</string>
    <string name="attempts">Attempts: %d</string>
    <string name="right_answers">Right Answers: %d</string>
    <string name="wrong_answers">Wrong Answers: %d</string>
    <string name="share">Share Result</string>
    <string name="view_details">View Details</string>
    <string name="congrat">Congratulations! You Have Completed The Exam</string>
    <string name="unattempted">Unattempted</string>
    <string name="share_via">Share Via</string>
    <string name="translation_title">Translation</string>
    <string name="explanation_title">Explanation</string>
    <string name="back_to_main_screen">Come Back To Main Screen</string>
    <string name="foo_clause">Clause</string>
    <string name="foo_formula">Formula</string>
    <string name="foo_brief_summary">Brief Summary</string>
    <string name="foo_explanation">Explanation</string>
    <string name="foo_example">Example</string>
    <string name="foo_topic">Topic</string>
    <string name="foo_last_example_on">Last Example Added On</string>
    <string name="confirm">Confirm</string>
    <string name="make_change">Make Change</string>
    <string name="agree">Agree</string>
    <string name="add_example">Add Example</string>
    <string name="add_memory_trick">Add Memory Trick</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="search_topic">Search Topic</string>
    <string name="reset">Reset</string>
    <string name="memory_trick">Memory Trick</string>
    <string name="no_topic">Unclassified</string>
    <string name="number_of_memory_tricks">You Have %d Memory Tricks</string>
    <string name="number_of_user_examples">You Have %d Examples</string>
    <string name="home">Home</string>
    <string name="clause_description">Description</string>
    <string name="user_example_tab">Examples</string>
    <string name="user_memory_trick">Memory Tricks</string>
    <string name="entry_topic">Topic: %s</string>
    <string name="entry_recent_study">Recent Study: %s</string>
    <string name="entry_next_study">Next Study: %s</string>
    <string name="next_study_on">Next Study Will Be On</string>
    <string name="cancel">Cancel</string>


</resources>
