<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:text="@string/foo_clause"
                android:id="@+id/clause_section"
                android:textSize="35sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:background="@color/correct_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/gray_border" />

            <TextView
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:text="@string/foo_formula"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/formula_section"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/gray_border" />

            <TextView
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:text="@string/foo_brief_summary"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/brief_summary_section"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/gray_border" />

            <TextView
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:text="@string/foo_explanation"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/explanation_section"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/gray_border" />

            <TextView
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:text="@string/foo_topic"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/topic_section"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/gray_border" />

            <TextView
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/foo_last_example_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lastExampleOn_section"
                android:textSize="25sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/gray_border" />

            <TextView
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:text="@string/foo_example"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/example_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/gray_border" />

            <TextView
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:text="@string/memory_trick"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/memory_trick_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"    />

            <Button
                android:id="@+id/add_example_button"
                android:layout_marginTop="10dp"
                android:text="@string/add_example"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/add_memory_trick_button"
                android:layout_marginTop="10dp"
                android:text="@string/add_memory_trick"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/agree_button"
                android:layout_marginTop="10dp"
                android:text="@string/agree"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>


