<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_width="match_parent"
            android:text="@string/foo_formula"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/formula_section"

            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_width="match_parent"
            android:text="@string/foo_brief_summary"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/brief_summary_section"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_width="match_parent"
            android:text="@string/foo_explanation"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/explanation_section"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_width="match_parent"
            android:text="@string/foo_topic"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/topic_section"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



</ScrollView>