<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity" >
    
    <android.support.design.widget.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"

            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/search_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:text="@string/search_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <AutoCompleteTextView
            android:id="@+id/search_topic_area"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:layout_below="@+id/search_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:background="@drawable/app_button"
            android:id="@+id/reset_topic"
            android:layout_below="@+id/search_topic_area"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/reset"/>

        <Button
            android:background="@drawable/app_button"
            android:id="@+id/search_topic_by_keyword"
            android:textSize="20sp"
            android:layout_below="@+id/search_topic_area"
            android:layout_toLeftOf="@+id/reset_topic"
            android:layout_toStartOf="@+id/reset_topic"
            android:text="@string/search_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/topics_list"
            android:layout_below="@+id/reset_topic"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
