<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/congrat"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_height="250dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/share_result"
            android:layout_toEndOf="@+id/share_result"
            android:id="@+id/congrat" />

        <Button
            android:textSize="18sp"
            android:text="@string/share"
            android:id="@+id/share_result"
            android:layout_alignParentTop="true"
            android:layout_marginTop="85dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_below="@+id/congrat"
            android:id="@+id/result_details_container"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/total_time"
                android:gravity="center"
                android:layout_width="match_parent"
                android:textSize="30sp"
                android:layout_height="0px"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/attempts"
                android:gravity="center"
                android:layout_width="match_parent"
                android:textSize="30sp"
                android:layout_height="0px"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/right_answers"
                android:layout_width="match_parent"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_height="0px"
                android:layout_weight="1"/>

            <TextView
                android:gravity="center"
                android:id="@+id/wrong_answers"
                android:layout_width="match_parent"
                android:textSize="30sp"
                android:layout_height="0px"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:id="@+id/view_translation_explanation"
            android:layout_below="@+id/result_details_container"
            android:textSize="18sp"
            android:text="@string/view_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:layout_alignParentBottom="true"
            android:layout_above="@+id/view_translation_explanation"
            android:id="@+id/exam_in_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</ScrollView>